Fix overflow

--- a/src/app/layouts/GlobalLayout/GlobalLayout.module.scss
+++ b/src/app/layouts/GlobalLayout/GlobalLayout.module.scss
@@ -1,13 +1,12 @@
 .global_layout {
 	display: flex;
 	gap: var(--gap-2);
-	width: 100%;
-	height: 100%;
+	width: 100dvw;
 	padding: var(--padding-2);
+	overflow-x: hidden;
 
 	.main {
 		width: 100%;
-		height: 100%;
 
 		@include card;
 	}
